kubernetes/ciim-ingress/es_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etna-ingress-es
  namespace: etna
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - http:
        paths:
          - path: /internal-es
            pathType: Prefix
            backend:
              service:
                name: ciim-internal-etna-es-http
                port:
                  number: 9200
          - path: /es
            pathType: Prefix
            backend:
              service:
                name: ciim-public-etna-es-http
                port:
                  number: 9200
          - path: /es-2
            pathType: Prefix
            backend:
              service:
                name: ciim-public-2-etna-es-http
                port:
                  number: 9200
          - path: /internal-dev
            pathType: Prefix
            backend:
              service:
                name: ciim-internal-etna-dev-es-http
                port:
                  number: 9200
          - path: /public-dev
            pathType: Prefix
            backend:
              service:
                name: ciim-public-etna-dev-es-http
                port:
                  number: 9200
          - path: /ciimdev
            pathType: Prefix
            backend:
              service:
                name: ciim-service-dev
                port:
                  name: api-port
