kubernetes/ciim-ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etna-ingress
  namespace: etna
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - http:
        paths:
          - path: /tna/api/
            pathType: Prefix
            backend:
              service:
                name: ciim-service
                port:
                  name: api-port
