kubernetes/ciim-ingress/staging_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etna-ingress-staging
  namespace: etna
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: request-transform-etna
spec:
  tls:
    - hosts:
        - rosetta-staging.k-int.com
      secretName: tls-secret-rosetta-staging
  rules:
    - host: rosetta-staging.k-int.com
      http:
        paths:
          - path: /tna/api/
            pathType: Prefix
            backend:
              service:
                name: ciim-service
                port:
                  name: api-port
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rosetta-3-service
                port:
                  name: rosetta-port
